--- a/TheUltimateFactsGame/FactsGame/src/main/AndroidManifest.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ie.iamshanedoyle.factsgame.HomeActivity"
+            android:name="ie.iamshanedoyle.factsgame.activities.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,18 +19,26 @@
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.GameActivity"
             android:label="@string/title_activity_game"
-            android:parentActivityName="ie.iamshanedoyle.factsgame.HomeActivity" >
+            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="HomeActivity" />
         </activity>
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.ScoresActivity"
-            android:label="@string/title_activity_scores" >
+            android:label="@string/title_activity_scores"
+            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="HomeActivity" />
         </activity>
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.HowToPlayActivity"
-            android:label="@string/title_activity_how_to_play" >
+            android:label="@string/title_activity_how_to_play"
+            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="HomeActivity" />
         </activity>
     </application>
 
