--- a/TheUltimateFactsGame/FactsGame/src/main/AndroidManifest.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.HomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +20,8 @@
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.GameActivity"
             android:label="@string/title_activity_game"
-            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
+            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="HomeActivity" />
@@ -27,7 +29,8 @@
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.ScoresActivity"
             android:label="@string/title_activity_scores"
-            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
+            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="HomeActivity" />
@@ -35,7 +38,8 @@
         <activity
             android:name="ie.iamshanedoyle.factsgame.activities.HowToPlayActivity"
             android:label="@string/title_activity_how_to_play"
-            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
+            android:parentActivityName="ie.iamshanedoyle.factsgame.activities.HomeActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="HomeActivity" />
