--- a/TheUltimateFactsGame/gradle.properties
+++ b/TheUltimateFactsGame/gradle.properties
@@ -16,3 +16,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# App Versions
+VERSION_NAME=1.0
+VERSION_CODE=1
+
+# SDK Build, Compile and Target Versions
+BUILD_TOOLS_VERSION=19.0.1
+COMPILE_SDK_VERSION=19
+TARGET_SDK_VERSION=19
+MIN_SDK_VERSION=16
